@@ -4,12 +4,15 @@
 <form action="&dtml-URL1;" method="post">
 <table cellspacing="0" cellpadding="2" border="0">
 <dtml-in items sort>
-<dtml-with "_(REQUEST=REQUEST, item=_['sequence-item'].aq_base)" only>
+<dtml-with "_(REQUEST=REQUEST, item=_['sequence-item'].aq_base, isDeletable=isDeletable)" only>
 <dtml-with item>
 <dtml-if id>
 <tr>
   <td align="left" valign="top">
-  <a href="&dtml-id;">&dtml-id; (&dtml-xml_namespace;)</a>
+  <dtml-if expr="isDeletable(id)"><input type=checkbox name="ids:list" value="&dtml-id;"></dtml-if>
+  </td>
+  <td align="left" valign="top">
+  <a href="&dtml-id;/manage">&dtml-id; <dtml-if xml_namespace>(<dtml-var xml_namespace>)</dtml-if></a>
   <dtml-if locked_in_session>
     <dtml-if modified_in_session>
       <img src="&dtml-BASEPATH1;/p_/locked"
@@ -25,17 +28,23 @@
 </dtml-with>
 </dtml-with>
 </dtml-in>
-</table>
-
-<table cellspacing="0" cellpadding="2" border="0">
 <tr>
-  <td align="left" valign="top">
-  </td>
-  <td align="left" valign="top">
-  <input type="submit" name="manage_addPropertySheetForm:method" 
-   class="form-element" value="Add">
+  <td colspan=2>
+    <input type="submit" name="manage_delPropertySheets:method" 
+  	 class="form-element" value="Delete">
   </td>
 </tr>
+</table>
+
+<table cellpadding=5>
+ <tr>
+    <td><span class="form-label">Name:</span> <input name="id"></td>
+    <td><span class="form-label">Namespace:</span> <input name="ns"></td>
+    <td>
+      <input type="submit" name="manage_addPropertySheet:method" 
+  	 class="form-element" value="Add">
+    </td>
+  </tr>
 </table>
 </form>
 
